# BitTalk

./: README.md  pyproject.toml
blog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_comment_options_and_more.py  0003_alter_post_category.py  0004_alter_post_author.py  0005_alter_comment_author_alter_post_author_and_more.py  0006_remove_post_image.py
coin_kind/: admin.py  apps.py  models.py
coin_kind/migrations/: 0001_initial.py  0002_alter_coinkind_options.py
common/: models.py
config/: sdf  settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_chat_room_alter_message_user.py
medias/: apps.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_blog_alter_video_blog.py  0003_alter_photo_file_alter_video_file.py  0004_alter_photo_blog.py
users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_gender.py  0003_alter_user_options.py  0004_alter_user_avatar.py  0005_alter_user_gender.py
